<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encontre Delivery</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="facebook_app_id">1385834838396217</string>
    
    <string name="adicionar_pedido">Adicionar ao pedido</string>
    <string name="adicionar_endereco">Adicionar endereço</string>
    <string name="aguarde_confirmar_pedido">Aguarde, verificando o recebimento do pedido pelo restaurante.</string>
    <string name="alterar_dados">Alterar dados</string>
    <string name="apagar">Apagar</string>
    <string name="atualizar">Atualizar</string>
    <string name="bom_apetite">Tenha um bom apetite!</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cardapio">Cardápio</string>
    <string name="carrinho">Carrinho</string>
    <string name="caso_pedido_nao_confirmado">O pedido será cancelado automaticamente, caso o restaurante não confirme o recebimento no tempo acima.</string>    
    <string name="categoria">Categoria:</string>
    <string name="categorias">Categorias</string>
    <string name="celular">Celular</string>
    <string name="cep">CEP</string>
    <string name="codigo_voucher">Código:</string>
    <string name="complemento_referencia">Referência</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirmar_endereco">Confirmar este endereço?</string>
    <string name="confirmar_endereco_titulo">Confirmar endereço</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="copyright">Copyright © 2015 King Soft.</string>
    <string name="data_pedido">Data do pedido</string>
    <string name="ddd">DDD</string>
    <string name="desconto">Desconto</string>
    <string name="desculpe">Desculpe!</string>
    <string name="detalhes_pedido">Detalhes do pedido</string>
    <string name="domingo">Domingo</string>
    <string name="editar">Editar</string>
    <string name="editar_endereco">Editar endereço</string>
    <string name="email">Email</string>
    <string name="encontrar">Encontrar</string>
    <string name="encontrar_endereco">Encontrar meu endereço</string>
    <string name="endereco">Endereço</string>
    <string name="endereco_entrega">Endereço de entrega</string>
    <string name="entrar">Entrar</string>
    <string name="entrar_facebook">Entrar com Facebook</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="escolha_forma_pagamento">Escolha a forma de pagamento:</string>
    <string name="escolha_numero_ligar">Escolha o número</string>
    <string name="escolha_tamanho">Escolha o tamanho</string>
    <string name="escolha_opcao">Escolha a sua opção</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="fone">Fone</string>
    <string name="fone_dois_pontos">Fone:</string>
    <string name="formas_pagamento">Formas de pagamento</string>
    <string name="horario_pedido">Horário do pedido</string>
    <string name="horarios">Horários</string>
    <string name="icone">Ícone</string>
    <string name="informacoes">Informações</string>
    <string name="inicio">Início</string>
    <string name="ir_tela_inicial">Ir para tela inicial</string>
    <string name="filtrar">Filtrar</string>
    <string name="filtros">Filtros</string>
    <string name="ligue_restaurante">Ligue e fale diretamente com o restaurante.</string>
    <string name="localize_gps">Localize-me pelo GPS</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logradouro_exemplos">Logradouro(rua, avenida, etc.)</string>
    <string name="meus_enderecos">Meus endereços</string>
    <string name="meus_dados">Meus dados</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="meus_vouchers">Meus Vouchers</string>
    <string name="minha_localizacao">Minha localização</string>
    <string name="nao">Não</string>
    <string name="nenhum_adicional">Nenhum adicional disponível para este produto.</string>
    <string name="nenhum_horario">Nenhum horário disponível para este restaurante.</string>
    <string name="nenhum_endereco">Nenhum endereço encontrado.</string>
    <string name="nenhum_restaurante">Nenhum restaurante disponível para este endereço.</string>
    <string name="nenhum_pedido_cliente">Você não possui nenhum pedido.</string>
    <string name="nenhum_produto">Nenhum produto disponível para esta categoria.</string>
    <string name="nenhum_produto_escolhido">Nenhum sabor/complemento disponível para este produto.</string>
    <string name="nenhum_produto_carrinho">Nenhum produto adicionado ao carrinho.</string>
    <string name="nenhum_meu_endereco">Você não possui endereços.</string>
    <string name="nenhum_voucher_cliente">Você não possui nenhum voucher.</string>
    <string name="nenhum_status">Este pedido não possui nenhum status.</string>
    <string name="nenhuma_categoria">Nenhuma categoria disponível para este restaurante.</string>    
    <string name="nenhuma_forma_pagamento">Nenhuma forma de pagamento disponível para este restaurante.</string>
    <string name="nome">Nome</string>
    <string name="nova_senha">Nova senha</string>
    <string name="numero">Número</string>
    <string name="observacoes">Observações</string>
    <string name="ok">OK</string>
    <string name="onde_voce_encontra">Onde você se encontra?</string>
    <string name="pedidos">Pedidos</string>
    <string name="pedido_cancelado">O seu pedido foi cancelado automáticamente pois o restaurante não confirmou o recebimento. Ligue para o restaurante para informar sobre o ocorrido.</string>
    <string name="pedido_enviado_sucesso">Pedido enviado com sucesso!</string>
    <string name="pedido_minimo">Pedido mínimo</string>
    <string name="pedido_recebido">O seu pedido foi enviado ao restaurante. Informaremos assim que for recebido.\nPara visualizar detalhadamente e acompanhar o pedido clique em DETALHES DO PEDIDO.</string>
    <string name="pedir">Pedir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="preco_tamanho">O preço será definido pelo tamanho</string>
    <string name="preco_produto">O preço será definido pelo maior preço entre as opções</string>
    <string name="preco_produto_escolhido">O preço será definido pela opção escolhida</string>
    <string name="problemas_alteracoes">Problemas? Alterações?</string>
    <string name="produtos">Produtos</string>
    <string name="proximo">Proximo</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="quero_me_cadastrar">Quero me cadastrar</string>
    <string name="referencia_abreviada">Ref.:</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="sabado">Sábado</string>
    <string name="segmentos">Segmentos</string>
    <string name="search_hint">Pesquisar...</string>
    <string name="segunda">Segunda</string>
    <string name="selecione_seu_voucher">Selecione seu voucher</string>
    <string name="senha">Senha</string>
    <string name="senha_atual">Senha atual</string>
    <string name="sexta">Sexta</string>
    <string name="sim">Sim</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="taxa_entrega">Taxa de entrega</string>
    <string name="terca">Terça</string>
    <string name="texto_esqueci_minha_senha">Informe seu e-mail e enviaremos passo-a-passo de como redifinir sua senha.</string>
    <string name="texto_pedir_localizacao">Informe a sua localização.</string>
    <string name="todos">Todos</string>
    <string name="total">Total</string>
    <string name="total_produtos">Total dos produtos</string>
    <string name="troco_para">Troco para:</string>
    <string name="ultimos">Ultimos</string>
    <string name="valor_unitario">Valor unit.</string>
    <string name="verificar_pedido_service">Seu pedido está demorando para ser aceito pelo restaurante? Clique aqui e ligue para saber o motivo.</string>
    <string name="voucher">Voucher</string>
    <string name="vouchers">Vouchers</string>

    <!-- Facebook -->
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Curtir</string>
    <string name="com_facebook_like_button_liked">Curtido</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Entrar pelo Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logado como: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logado usando Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancelar</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Logado&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logado</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Não logado</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d esteve aqui</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d esteve aqui</string>
    <string name="com_facebook_picker_done_button_text">Concluído</string>
    <string name="com_facebook_choose_friends">Escolha os amigos</string>
    <string name="com_facebook_nearby">Próximo</string>
    <string name="com_facebook_loading">Carregando...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">A sua conta Facebook está bloqueada. Por favor entre em www.facebook.com para continuar.</string>
    <string name="com_facebook_requesterror_relogin">Por favor entre em este aplicativo novamente para reconectar a sua conta Facebook.</string>
    <string name="com_facebook_requesterror_password_changed">Sua senha do Facebook mudou. Por favor entre em este aplicativo novamente para reconectar a sua conta Facebook.</string>
    <string name="com_facebook_requesterror_reconnect">Por favor entre em este aplicativo novamente para reconectar a sua conta Facebook.</string>
    <string name="com_facebook_requesterror_permissions">Este aplicativo não tem permissão para fazer isso. Para alterar as permissões, tente fazer o login no aplicativo novamente.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
</resources>
