<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_button"
    tools:context=".DashboardActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="@dimen/dashbord_layout_marginTop"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/texto_pedir_localizacao"
        android:gravity="center"
        android:textColor="@color/primary_500"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnLocalizeGPS"
        style="@style/button_red"
        android:layout_marginTop="@dimen/button_layout_marginTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout_height"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/ic_action_place_red_white"
        android:onClick="clickLocalizeGPS"
        android:text="@string/localize_gps" />

    <Button
        android:id="@+id/btnEncontrarEndereco"
        style="@style/button_red"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/button_layout_marginTop"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/ic_action_search_red_white"
        android:onClick="clickEncontrarEndereco"
        android:text="@string/encontrar_endereco" />

    <Button
        android:id="@+id/btnMeusEnderecos"
        style="@style/button_red"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/button_layout_marginTop"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/ic_action_map_red_white"
        android:onClick="clickMeusEnderecos"
        android:text="@string/meus_enderecos" />

</LinearLayout>