<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding" >

    <ListView
        android:id="@+id/lvProdutosPedido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:visibility="gone" >
    </ListView>

    <LinearLayout
        android:id="@+id/llVazioProdutosCarrinho"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icone"
            android:src="@drawable/ic_action_shopping_cart_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nenhum_produto_carrinho"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:orientation="vertical" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/list_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/pedido_minimo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtValorMinimo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/layout_marginRight"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00 "
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_divider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/total_produtos"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotalProdutos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/layout_marginRight"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00 "
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_divider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginTop"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/taxa_entrega"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTaxaEntrega"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginTop"
                android:layout_marginRight="@dimen/layout_marginRight"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00 "
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_divider" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/layout_marginTop"
            android:background="@color/list_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/total"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/layout_marginRight"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00 "
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnProximo"
            style="@style/button_red"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_layout_height"
            android:layout_marginTop="@dimen/button_layout_marginTop"
            android:background="@drawable/button_red"
            android:drawableRight="@drawable/ic_action_next_item"
            android:onClick="clickProximo"
            android:text="@string/proximo" />
    </LinearLayout>

</LinearLayout>